--- a/style.css
+++ b/style.css
@@ -1,64 +1,139 @@
 /* CSS files add styling rules to your content */
 
 body {
-  font-family: helvetica, arial, sans-serif;
-  margin: 2em;
-  background-color: slategrey;
-  color: white;  
+    font-family: helvetica, arial, sans-serif;
+    margin: 2em;
+    background-color: gainsboro;
+    color: darkslategray;  
 }
-
+  
 h1 {
-  font-family: verdana, arial, sans-serif;  
+    font-family: verdana, arial, sans-serif;  
 }
 
 button {
-  padding: 10px;
-  border-radius: 10px;  
+    padding: 10px;
+    border-radius: 10px;  
+}
+
+#gameButtonArea {
+    position: fixed;
+    bottom: 40%;
 }
 
 #gameButtonArea > button {
-  width:200px;
-  height:200px;
-  margin:2px;
-  
+    width:200px;
+    height:200px;
+    margin:2px;
 }
 
 .hidden {
-  display: none;
-  
+    display: none;
 }
+
+#mistakes {
+    position: absolute;
+    top: 40px;
+    right: 22%;
+    padding: 10px;
+    background-color: #efefef;
+    border-radius: 10px;
+    color: red;
+    font-family: Bahnschrift;
+}
+
+#score {
+    position: absolute;
+    top: 40px;
+    right: 12%;
+    padding: 10px;
+    background-color: #efefef;
+    border-radius: 10px;
+    color: blue;
+    font-family: Bahnschrift;
+}
+
 #button1 {
-  background: lightgreen;  
-}
-#button1:active, #button1.lit {
-  background:green;
+    background: chartreuse;  
 }
 
 #button2 {
-  background: lightblue;
-}
-#button2:active, #button2.lit {
-  background: blue;
+    background: cyan;
 }
 
 #button3 {
-  background: pink;
-}
-#button3:active, #button3.lit {
-  background: red;
+    background: deeppink;
 }
 
 #button4 {
-  background: lightyellow;
-}
-#button4:active, #button4.lit {
-  background: yellow;
+    background: yellow;
 }
 
+#button5 {
+    background: floralwhite;
+}
 
+#button6 {
+    background: lightsalmon;
+}
 
+/* Sets the containers height and width */
+#base-timer {
+    height: 150px;
+    width: 150px;
+    position: fixed;
+    bottom: 75%;
+    right: 45%;
+    object-position: right top;
+}
 
+/* Removes SVG styling that would hide the time label */
+.base-timer__circle {
+    fill: none;
+    stroke: none;
+}
 
+/* The SVG path that displays the timer's progress */
+.base-timer__path-elapsed {
+    stroke-width: 7px;
+    stroke: white;
+}
 
+.base-timer__label {
+    position: absolute;
+    height: 150px;
+    width: 150px;
+    top: 0;
 
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 32px;
+}
 
+.base-timer__path-remaining {
+    stroke-width: 7px;
+    stroke-linecap: round;
+
+    transform: rotate(90deg);
+    transform-origin: center;
+
+    transition: 1s linear all;
+    stroke: currentColor;
+}
+
+.base-timer__path-remaining.green {
+    color: rgb(65, 184, 131);
+}
+  
+.base-timer__path-remaining.orange {
+    color: orange;
+}
+  
+.base-timer__path-remaining.red {
+    color: red;
+}
+  
+.base-timer__svg {
+    transform: sclaeX(-1);
+}
